// file: pkg/organization/proto/messages/tenant.proto
edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/timestamp.proto";
import "common/proto/key_value.proto";
import "pkg/organization/proto/isolation_level.proto";
import "pkg/organization/proto/tenant_quota.proto";
import "pkg/organization/proto/tenant_status.proto";
import "db/proto/isolation_level.proto";
import "db/proto/isolation_level.proto";
import "organization/proto/tenant_status.proto";
import "organization/proto/tenant_quota.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

/**
 * Tenant message representing a tenant within an organization.
 * Supports multi-tenant architecture with configurable isolation levels,
 * resource quotas, and tenant-specific settings.
 */
message Tenant {
  // Unique tenant identifier (immutable)
  string id = 1;

  // Parent organization identifier
  string organization_id = 2;

  // Tenant name (human-readable identifier)
  string name = 3;

  // URL-friendly slug for the tenant (e.g., for subdomains)
  string slug = 4;

  // Tenant description
  string description = 5;

  // Current status of the tenant
  TenantStatus status = 6;

  // Isolation level for this tenant
  OrganizationIsolationLevel isolation_level = 7;

  // Tenant metadata and custom attributes
  repeated gcommon.v1.common.KeyValue metadata = 8 [lazy = true];

  // Tenant creation timestamp (immutable)
  google.protobuf.Timestamp created_at = 9 [lazy = true];

  // Last update timestamp
  google.protobuf.Timestamp updated_at = 10 [lazy = true];

  // User ID who created this tenant
  string created_by = 11;

  // User ID who last updated this tenant
  string updated_by = 12;

  // Database connection string or identifier (for DATABASE isolation)
  string database_config = 13;

  // Network configuration (for NETWORK isolation)
  string network_config = 14;

  // Resource quotas for this tenant
  TenantQuota quota = 15;

  // Custom domain for this tenant (if applicable)
  string custom_domain = 16;

  // Tenant's timezone override (inherits from organization if not set)
  string timezone = 17;

  // Tenant's locale override (inherits from organization if not set)
  string locale = 18;

  // Whether this tenant is in trial mode
  bool trial_mode = 19;

  // Trial expiration timestamp (if trial_mode is true)
  google.protobuf.Timestamp trial_expires_at = 20 [lazy = true];
}
